# airsim2real

./: .gitignore  .pdm-python  README.md  pyproject.toml  setting.txt
src/: airsim_bridge.py  main.py
src/configs/: airsim_config.py
src/task/: control.py  display.py
src/unrealengine/: catch_pos.py
src/utils/: util.py
